--- a/Deno/Views/Base.lproj/Main.storyboard
+++ b/Deno/Views/Base.lproj/Main.storyboard
@@ -317,31 +317,46 @@
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="78.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Kia Rio" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J5r-mr-ouy">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Kia Rio" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J5r-mr-ouy">
                                                     <rect key="frame" x="20" y="18" width="53" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="53" id="Hhp-1x-Qi7"/>
+                                                    </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="15 min" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VZx-rr-Wiq">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="15 min" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VZx-rr-Wiq">
                                                     <rect key="frame" x="20" y="47" width="45" height="18"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="45" id="qMB-DQ-9Ic"/>
+                                                    </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                     <color key="textColor" red="0.27065110206604004" green="0.30835217237472534" blue="0.38824540376663208" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="$15" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Qx-JV-3Yi">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$15" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Qx-JV-3Yi">
                                                     <rect key="frame" x="349" y="30" width="26" height="18"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="26" id="dbh-pa-XHH"/>
+                                                    </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                     <color key="textColor" red="0.27065110209999999" green="0.30835217240000001" blue="0.3882454038" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="4Qx-JV-3Yi" firstAttribute="top" secondItem="Y8y-UN-B5D" secondAttribute="top" constant="30" id="2uv-Fp-Mhb"/>
+                                                <constraint firstAttribute="trailing" secondItem="4Qx-JV-3Yi" secondAttribute="trailing" constant="39" id="B3u-vk-jjm"/>
+                                                <constraint firstItem="VZx-rr-Wiq" firstAttribute="leading" secondItem="Y8y-UN-B5D" secondAttribute="leading" constant="20" id="EWY-Ui-TkD"/>
+                                                <constraint firstItem="VZx-rr-Wiq" firstAttribute="top" secondItem="J5r-mr-ouy" secondAttribute="bottom" constant="8" id="ds7-fD-6Zf"/>
+                                                <constraint firstItem="J5r-mr-ouy" firstAttribute="leading" secondItem="Y8y-UN-B5D" secondAttribute="leading" constant="20" id="nxE-Pa-C55"/>
+                                                <constraint firstItem="J5r-mr-ouy" firstAttribute="top" secondItem="Y8y-UN-B5D" secondAttribute="top" constant="18" id="svn-yu-VVe"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="name" destination="J5r-mr-ouy" id="VtT-FA-X2i"/>
+                                            <outlet property="price" destination="4Qx-JV-3Yi" id="7wV-JA-cTU"/>
                                             <outlet property="time" destination="VZx-rr-Wiq" id="wsr-n5-tuf"/>
                                         </connections>
                                     </tableViewCell>
